--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body {
   min-height: 100vh;
   font-family: Open sans, Helvetica, sans-serif;
-  
+  background: #111;
   background-image: url("ressources/10.png");
   
   padding: clamp(20px, 5vw, 50px) 10px 10px;
